# pal_msgs

./: CONTRIBUTING.md  LICENSE  README.md
pal_behaviour_msgs/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
pal_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_control_msgs/: .gitignore  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pal_control_msgs/action/: RigidBodyTrajectory.action
pal_control_msgs/msg/: OperationalSpaceGoal.msg.ros1  OperationalSpaceGoal.msg.ros2  RigidBodyStateTolerance.msg  RigidBodyTrajectoryPoint.msg.ros2
pal_detection_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_detection_msgs/msg/: FaceDetection.msg  FaceDetections.msg  FaceThermalDetection.msg  FaceThermalDetections.msg  LegDetections.msg  Obstacle2d.msg  Obstacle2dArray.msg  PersonDetection.msg  PersonDetections.msg  RecognizedActions.msg  TexturedObjectDetection.msg
pal_detection_msgs/srv/: AddTexturedObject.srv  SelectTexturedObject.srv
pal_device_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_device_msgs/action/: DoTimedLedEffect.action
pal_device_msgs/msg/: BatteryState.msg  Bumper.msg  LedBlinkParams.msg  LedDataArrayParams.msg  LedEffectParams.msg  LedFadeParams.msg  LedFlowParams.msg  LedGroup.msg  LedProgressParams.msg  LedRainbowParams.msg
pal_device_msgs/srv/: CancelEffect.srv  ShutdownAndWakeUpRobot.srv  TimedBlinkEffect.srv  TimedColourEffect.srv  TimedFadeEffect.srv
pal_interaction_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_interaction_msgs/action/: ASRFile.action  AudioPlay.action  tts.action
pal_interaction_msgs/msg/: ASRActivation.msg  ASREvent.msg  ASRGrammarMngmt.msg  ASRSrvRequest.msg  ASRSrvResponse.msg  ASRStatus.msg  AudioDeviceDescription.msg  AudioPlayerState.msg  Input.msg  asrresult.msg  asrupdate.msg  i18nText.msg
pal_interaction_msgs/srv/: GetSpeechDuration.srv
pal_motion_model_msgs/: CHANGELOG.rst  mainpage.dox  manifest.xml  package.xml
pal_msgs/: CHANGELOG.rst  package.xml
pal_multirobot_msgs/: CHANGELOG.rst  mainpage.dox  manifest.xml  package.xml
pal_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_navigation_msgs/action/: FollowWaypoints.action
pal_navigation_msgs/msg/: LaserImage.msg  MapConfiguration.msg  Waypoint.msg
pal_navigation_msgs/srv/: ChangeSyncMap.srv  RegisterSync.srv  SaveMap.srv  SyncMap.srv
pal_simulation_msgs/: CHANGELOG.rst  package.xml
pal_tablet_msgs/: CHANGELOG.rst  mainpage.dox  manifest.xml  package.xml
pal_video_recording_msgs/: CHANGELOG.rst  package.xml
pal_vision_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
pal_visual_localization_msgs/: CHANGELOG.rst  package.xml
pal_walking_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_web_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
pal_web_msgs/action/: GetUserInput.action  GoToWeb.action
pal_web_msgs/msg/: Subtitles.msg  TouchWeb.msg  WebGoTo.msg
pal_web_msgs/srv/: GetLastTouchWeb.srv
pal_wifi_localization_msgs/: CHANGELOG.rst  mainpage.dox  manifest.xml  package.xml
pal_wifi_localization_msgs/msg/: WifiSignalMap.msg
text_to_speech/: CMakeLists.txt  package.xml
text_to_speech/action/: Sound.action
