<package format="3">
  <name>pal_common_msgs</name>
  <version>0.13.1</version>
  <description>
    This package defines generic messages used by PAL nodes.</description>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <license>BSD</license>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_auto</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <depend condition="$ROS_VERSION == 1">actionlib_msgs</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>

  <depend condition="$ROS_VERSION == 2">action_msgs</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
