<?xml version="1.0"?>
<package format="3">
  <name>pal_device_msgs</name>
  <version>2.0.0</version>
  <description>This package defines messages used by PAL devices and drivers.</description>

  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>

  <license>Proprietary</license>

  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
