<package format="3">
  <name>pal_interaction_msgs</name>
  <version>0.13.1</version>
  <description>
    This package defines messages used by the PAL interaction tools.</description>
  <maintainer email="jordi.adell@pal-robotics.com">Jordi Adell</maintainer>
  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <license>BSD</license>
  <author email="jordi.adell@pal-robotics.com">Jordi Adell</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 1">actionlib_msgs</build_depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">actionlib_msgs</exec_depend>

  <build_depend condition="$ROS_VERSION == 2">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 2">std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 2">actionlib_msgs</build_depend>

  <exec_depend condition="$ROS_VERSION == 2">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">std_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">actionlib_msgs</exec_depend>
</package>
